@@ -75,6 +75,10 @@ New in spot 2.5.2 (2018-03-25)
 
   - "autfilt -B --sat-minimize" was incorrectly producing
     transition-based automata.
+
+  - Using spot.automata("cmd...|") to read just a few automata out of
+    an infinite stream would not properly terminate the command.
+
   - acc_cond::is_generalized_rabin() and
     acc_cond::is_generalized_streett() would segfault on weird
     acceptance conditions such as "3 t" or "3 f".
